# promo.github.io

./: .env  Dockerfile  README.md  beauty.db  pyproject.toml
app/: config.py  main.py  models.py
static/: index.html  index1.html  index2.html
